--- a/html101.html
+++ b/html101.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     </head>
-        <title>Unopa Male</title>
+        <title>Mr Unopa Male</title>
         <link rel="stylesheet" href"/css/styles.css">
     </head>
     <body style="background-color: rgb(139, 139, 239);">
